# python-playground

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
01-pytest/how_to_use_fixture/: conftest.py  test_emaillib_yield.py  test_fruit_salad.py
02-pydantic/models/: basic_model.py  error_handling.py  error_handling_custom_errors.py  helper_functions.py  helper_functions_creating_models_without_validation.py  orm_mode.py  orm_mode_data_binding.py  orm_mode_recursive_orm_models.py  orm_mode_reserved_names.py  recursive_models.py
02-pydantic/validators/: validator_decorator.py
03-threading/: create_thread_2nd_way.py  creating_thread_first_way.py
2023-03-09-pytest/how_to_use_fixture/: test_fixtures_are_reusable.py  test_fixtures_can_request_other_fixtures.py  test_return_values_are_cached.py
