[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = "experiment various python features"
authors = ["CoodingPenguin <coodingpenguin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"
pytest = "^7.3.1"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.14"
asyncio = "^3.4.3"
aiomonitor = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
